// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. default layout 1`] = `
<View
  aspectRatio={1.5}
>
  <View
    height={350}
    width={525}
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../packages/image/assets/t.png",
        }
      }
    />
  </View>
  <Image
    source={
      Object {
        "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080",
      }
    }
  />
</View>
`;

exports[`2. default layout without uri 1`] = `
<View
  aspectRatio={2}
>
  <View
    height={350}
    width={700}
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../packages/image/assets/t.png",
        }
      }
    />
  </View>
  <Image
    source={null}
  />
</View>
`;

exports[`3. default layout without aspect ratio 1`] = `
<View>
  <View
    height={350}
    width={700}
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../packages/image/assets/t.png",
        }
      }
    />
  </View>
  <Image
    source={
      Object {
        "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=800",
      }
    }
  />
</View>
`;

exports[`4. prepend https schema 1`] = `
<View
  aspectRatio={2}
>
  <View
    height={350}
    width={700}
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../packages/image/assets/t.png",
        }
      }
    />
  </View>
  <Image
    source={
      Object {
        "uri": "https://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080",
      }
    }
  />
</View>
`;

exports[`5. handle onload event 1`] = `
<View
  aspectRatio={2}
>
  <View
    height={350}
    width={700}
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../packages/image/assets/t.png",
        }
      }
    />
  </View>
  <Image
    source={
      Object {
        "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080",
      }
    }
  />
</View>
`;

exports[`5. handle onload event 2`] = `
<View
  aspectRatio={2}
>
  <Image
    source={
      Object {
        "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080",
      }
    }
  />
</View>
`;

exports[`7. uses highressize if it exists 1`] = `
<View
  aspectRatio={2}
>
  <View
    height={350}
    width={700}
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../packages/image/assets/t.png",
        }
      }
    />
  </View>
  <Image
    source={
      Object {
        "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=660",
      }
    }
  />
</View>
`;

exports[`9. image with borderradius 1`] = `
<View
  aspectRatio={2}
>
  <Image
    borderRadius={10}
    source={
      Object {
        "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080",
      }
    }
  />
</View>
`;

exports[`10. uses lowressize image as placeholder if passed 1`] = `
<View
  aspectRatio={2}
>
  <Image
    source={
      Object {
        "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=800",
      }
    }
  />
  <Image
    source={
      Object {
        "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=2308",
      }
    }
  />
</View>
`;

exports[`12. handle layout change 1`] = `
<View
  aspectRatio={2}
>
  <View
    height={300}
    width={600}
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../packages/image/assets/t.png",
        }
      }
    />
  </View>
  <Image
    source={
      Object {
        "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080",
      }
    }
  />
</View>
`;
